Drop "No analytics" claim from footer
Cloudflare collects server-side metrics as the CDN, so the
claim isn't fully accurate. Keep the honest note in README.

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
   </div>
 
   <footer class="landing-footer">
-    Built by <span class="by">Brenden Ferland</span> &middot; No analytics &middot; All solving happens in your browser &middot; <a href="https://github.com/PEEKPerformer/when2solve" target="_blank">GitHub</a>
+    Built by <span class="by">Brenden Ferland</span> &middot; All solving happens in your browser &middot; <a href="https://github.com/PEEKPerformer/when2solve" target="_blank">GitHub</a>
   </footer>
 </div>
 
